--- a/api/components.json
+++ b/api/components.json
@@ -7,6 +7,7 @@
     "7c9e6679-7425-40de-944b-e07fc1f90ae7",
     "3fa85f64-5717-4562-b3fc-2c963f66afa6",
     "8e4f2a9c-6b5d-4e3a-9f1c-2d8b7e3a4c5f",
-    "a1b2c3d4-e5f6-7890-abcd-ef1234567890"
+    "a1b2c3d4-e5f6-7890-abcd-ef1234567890",
+    "b2c3d4e5-f6a7-8901-bcde-f23456789012"
   ]
 }
